# django-moderation-model-mixin

./: .pre-commit-config.yaml  Makefile  README.rst  pyproject.toml  requirements_dev.in  requirements_dev.txt  setup.cfg  setup.py  tasks.py  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: actions.yml
docs/: conf.py  index.rst  installation.rst  usage.rst
moderation_model_mixin/: admin.py  apps.py  managers.py  models.py  querysets.py  signals.py
moderation_model_mixin/templatetags/: moderation_admin.py
tests/: README.md  settings.py
tests/test_app/: admin.py  models.py
tests/test_app/migrations/: 0001_initial.py
tests/test_app/tests/: test_managers.py  test_models.py  test_querysets.py  test_signals.py
