[coverage:run]
branch = True
omit =
    .tox/*
    .venv/*
    */asgi.py
    */migrations/*
    */tests/*
    */wsgi.py
    manage.py
    tasks.py
    dashboard.py
    */settings.py
    */management/commands/*
    */factories.py
    */customer_care/*
    */urls.py
    profiles/*
    */migration_utils.py
    */settings_mixins.py
    */settings_utils.py
    */model_mixins.py
    */context_processors.py
    */post_office_admin.py
    */model_admin_mixin.py
    */test_utils.py
    */docs_utils.py
    *admin.py
source = .

[flake8]
exclude =
    __pycache__,
    .git,
    .mypy_cache,
    .pytest_cache,
    .tox,
    .venv,
    .vscode,
    ./node_modules/*,
    */migrations/*,
    */south_migrations/*,
    */tests/*,
    ./src/*,
    project/settings/*,
ignore =
    E501,
    T499,
    W503,
    D104,
    D105,
    D101,
    D100,
    E203,
    E501,
    W503,
    F401,
    D103,
    F403,
    D102,
    B950,
    B008,
    D106,
    D401,
    D403,
    D400,
    D205,
    D200,
    D208,
    D210,
    T484,
    I005,
    D107,
    T400,
max-line-length = 120
mypy_config = setup.cfg
no_implicit_optional=False
select = B,C,D,E,F,I,W,T4,B9

[metadata]
license-file = LICENSE.md

[testenv:coverage]
allowlist_externals = *
commands =
    coverage run --concurrency=multiprocessing {toxinidir}/manage.py test project/ -t . --settings=project.test_settings --noinput --parallel --reverse
    coverage combine
commands_pre =
    cp {toxinidir}/project/settings/_local_settings_ci.py {toxinidir}/project/settings/local_settings.py
    pip install \
        "black~=22.3.0" "isort~=5.12.0" "flake8~=3.8.0" "mypy~=0.931" tblib \
        types-requests types-freezegun types-python-dateutil types-pytz types-six types-paramiko
    black --check .
    isort --check .
    flake8
    mypy .
deps = -r{toxinidir}/requirements/dev.txt
passenv =
    DATABASE_URL
    DJANGO_SETTINGS_MODULE
    FAIL_UNDER_COVERAGE_PERCENTAGE
setenv =
    DJANGO_CONFIGURATION=Testing

[testenv:report]
commands = coverage report --fail-under={env:FAIL_UNDER_COVERAGE_PERCENTAGE}
deps = coverage~=5.3.0

[testenv:reporthtml]
commands = coverage html
deps = coverage~=5.3.0

[testenv:reportxml]
commands = coverage xml -o coverage.xml
deps = coverage~=5.3.0

[tox:tox]
envlist = coverage
skipsdist = True
